2004-10-13 Ian Rutt
 * Reorganised upscaling and field splicing to enable easy output of 
   initial fields to global model at initialisation time.

2004-09-20 Ian Rutt
 * Updated f90_dependencies.py to Magi's latest version - handles more
 than one module per file.

2004-09-16 Ian Rutt
 * Added Tony's physics documentation to main docs.
 * Patched netcdf I/O as per Magi's email
 * Added if block round velocity calculation so they're not
   done if whichevol=2 (when they are redundant).
	
2004-09-14 Ian Rutt
 * Finished updating user documentation.

2004-09-10 Ian Rutt
 * Continued to update documentation.

2004-08-26 Ian Rutt
 * More documentation updating - also changed font size

2004-08-25 Ian Rutt
 * Fixed problem with reading arrays from config files in
   glimmer_setup.f90
 * Replaced top-level glimmer namelist with new-style configuration file.
 * Began updating documentation
 * Added character array handling to glimmer_config.f90
	
2004-08-24 Ian Rutt
 * Added user input to determine length of glimmer_example run

2004-08-23 Ian Rutt
 * Finished replacing namelist input with Magi's config-type parameter
   file format. Removed old namelist code.
 * Added two new functions (for reading real(dp) variables and arrays) to
   glimmer_config.f90.

2004-08-19 Ian Rutt
 * Moved PDD and precip forcing parameters into the namelist, and slightly
   reorganized glimmer_paramets.f90 and glimmer_physcon.f90. Would like to
   get rid of both these files eventually.
 * Removed redundant nout and nstr parameters from model
 * Expanded test_config, and added it to build/install in makefile
 * Began work to replace namelist input with Magi's config-type file
 * Added functions to glimmer_config.f90 to check whether section/value
   names are in a prescribed list or not.
	
2004-08-18 Magnus Hagdorn
 * Brown Paper Back: only applied half the patch to glimmer_thck.f90
   derivatives should be devided by 2*grid_length rather than multiplied

2004-08-18 Ian Rutt